syntax = "proto3";

package user;

option go_package = "pb/user";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
}

message User {
  int64 id = 1;
  string name = 2;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
   string name = 1;
}

message CreateUserResponse {
   User user = 1;
}

message ListUsersRequest {
  // Optional pagination parameters
  int32 page_size = 1;
  int32 page = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
}